add PYTHONPATH=/Users/takuma.urata/Desktop/z/cloudfunctions_autodeploy_sample on github pytest workflow

--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -47,5 +47,5 @@ jobs:
       #              run test suite
       #----------------------------------------------
       - name: Test with pytest
-        run: poetry run pytest -v -s
+        run: PYTHONPATH=$(pwd) poetry run pytest -v -s
       
