--- a/.github/workflows/deploy-cloudfunctions.yaml
+++ b/.github/workflows/deploy-cloudfunctions.yaml
@@ -6,7 +6,6 @@ on:
     branches: 
       - main
       - develop
-
 jobs:
   job_id:
     runs-on: "ubuntu-latest"
@@ -22,7 +21,8 @@ jobs:
         with:
           workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER_ID}} # 作成したプロバイダのID
           service_account: "collector@${{ secrets.GCP_PROJECT_ID }}.iam.gserviceaccount.com" # プロバイダで指定したサービスアカウント
-
+      - run: gcloud auth list
+      - run: gcloud config list
       - id: "deploy"
         uses: "google-github-actions/deploy-cloud-functions@v2"
         with: # Cloud Functions の設定(下記は一例)
