--- a/.github/workflows/deploy-cloudfunctions.yaml
+++ b/.github/workflows/deploy-cloudfunctions.yaml
@@ -19,8 +19,8 @@ jobs:
       - id: "auth"
         uses: "google-github-actions/auth@v2"
         with:
-          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER_ID}} # 作成したプロバイダのID
-          service_account: "collector@${{ secrets.GCP_PROJECT_ID }}.iam.gserviceaccount.com" # プロバイダで指定したサービスアカウント
+          workload_identity_provider: projects/12625448368/locations/global/workloadIdentityPools/test-pool/providers/github # 作成したプロバイダのID
+          service_account: "collector@tradingdev-432816.iam.gserviceaccount.com" # プロバイダで指定したサービスアカウント
       # - run: gcloud auth activate-service-account --key-file=$GOOGLE_APPLICATION_CREDENTIALS
       - run: gcloud auth list
       - run: gcloud config list
